k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke
  labels:
    app: gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gke
  template:
    metadata:
      labels:
        app: gke
    spec:
      containers:
        - name: app
          image: gcr.io/dongri/gke:734351ac0e7fc18ed139b23a2dea7b0025c3a5bd
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
