k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: gke
              servicePort: 8080
